criação pasta analises

--- a/carteira-ativos/formula_joel.ipynb
+++ b/carteira-ativos/formula_joel.ipynb
@@ -3103,7 +3103,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# criar visualização"
+   ]
   }
  ],
  "metadata": {
