filtro de 95-5 percentil

--- a/carteira-ativos/carteira_ativos_caros.ipynb
+++ b/carteira-ativos/carteira_ativos_caros.ipynb
@@ -546,6 +546,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# calculo percentil para determinar intervalo de confiança\n",
+    "\n",
     "def percentil(data, up=90, down=10):\n",
     "    x = data\n",
     "    x = x.dropna()\n",
@@ -558,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +597,7 @@
     "    valor = 0\n",
     "\n",
     "    # logica\n",
-    "    # logica valor = +1 +1 +1 or -1 -1 -1\n",
+    "    # logica valor = +1 +2 +4 or -1 -2 -4 para diferenciar qual média aponta distancia\n",
     "    if df['Dist20'][-1] > per_m20[0]:\n",
     "        valor += 1\n",
     "    \n",
@@ -619,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -628,18 +630,18 @@
        "4"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "caroBarato('PETR4', 90, 10, 500)"
+    "caroBarato('PETR4', 95, 5, 500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1075,7 @@
     "dicionarioCarobarato = {}\n",
     "for ativo in ativos:\n",
     "    try:\n",
-    "        dicionarioCarobarato[ativo] = caroBarato(ativo, 90, 10, 500)\n",
+    "        dicionarioCarobarato[ativo] = caroBarato(ativo, 95, 5, 500)\n",
     "        print(f'COLETA DE {ativo}')\n",
     "    except:\n",
     "        print(f'{ativo} SEM COLETA')\n",
@@ -1083,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1167,7 @@
        "    <tr>\n",
        "      <th>419</th>\n",
        "      <td>LWSA3</td>\n",
-       "      <td>-4</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1184,12 +1186,12 @@
        "416   AMER3      0\n",
        "417   VIIA3      0\n",
        "418   SEQL3      0\n",
-       "419   LWSA3     -4\n",
+       "419   LWSA3      0\n",
        "\n",
        "[420 rows x 2 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1231,49 +1233,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>339</th>\n",
-       "      <td>BSLI4</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>228</th>\n",
-       "      <td>NUTR3</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>175</th>\n",
-       "      <td>SAPR4</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>ESTR4</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>173</th>\n",
-       "      <td>SAPR11</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>351</th>\n",
        "      <td>INTB3</td>\n",
        "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>ELMD3</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>286</th>\n",
-       "      <td>HAGA3</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>384</th>\n",
-       "      <td>NGRD3</td>\n",
-       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
@@ -1281,13 +1243,13 @@
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156</th>\n",
-       "      <td>PLPL3</td>\n",
-       "      <td>7</td>\n",
+       "      <th>132</th>\n",
+       "      <td>DMMO3</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>118</th>\n",
-       "      <td>CPLE3</td>\n",
+       "      <th>12</th>\n",
+       "      <td>VLID3</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1296,13 +1258,8 @@
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>ORVR3</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>VLID3</td>\n",
+       "      <th>118</th>\n",
+       "      <td>CPLE3</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1310,37 +1267,22 @@
        "      <td>CPLE6</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>DMMO3</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Ticker  Valor\n",
-       "339   BSLI4      5\n",
-       "228   NUTR3      5\n",
-       "175   SAPR4      5\n",
-       "40    ESTR4      5\n",
-       "173  SAPR11      5\n",
-       "351   INTB3      5\n",
-       "9     ELMD3      6\n",
-       "286   HAGA3      6\n",
-       "384   NGRD3      6\n",
-       "29    ECPR4      6\n",
-       "156   PLPL3      7\n",
-       "118   CPLE3      7\n",
-       "27    MBLY3      7\n",
-       "13    ORVR3      7\n",
-       "12    VLID3      7\n",
-       "125   CPLE6      7\n",
-       "132   DMMO3      7"
+       "    Ticker  Valor\n",
+       "351  INTB3      5\n",
+       "29   ECPR4      6\n",
+       "132  DMMO3      6\n",
+       "12   VLID3      7\n",
+       "27   MBLY3      7\n",
+       "118  CPLE3      7\n",
+       "125  CPLE6      7"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1387,28 +1329,8 @@
        "      <td>-7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>383</th>\n",
-       "      <td>ALPA4</td>\n",
-       "      <td>-7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>299</th>\n",
        "      <td>WLMM4</td>\n",
-       "      <td>-7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>391</th>\n",
-       "      <td>BRFS3</td>\n",
-       "      <td>-7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>204</th>\n",
-       "      <td>BMEB3</td>\n",
-       "      <td>-7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>141</th>\n",
-       "      <td>CESP5</td>\n",
        "      <td>-7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1417,23 +1339,33 @@
        "      <td>-7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>EMBR3</td>\n",
+       "      <th>204</th>\n",
+       "      <td>BMEB3</td>\n",
        "      <td>-7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>391</th>\n",
+       "      <td>BRFS3</td>\n",
+       "      <td>-7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>CSRN5</td>\n",
+       "      <td>-6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>34</th>\n",
        "      <td>TXRX4</td>\n",
-       "      <td>-7</td>\n",
+       "      <td>-6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>FRIO3</td>\n",
-       "      <td>-7</td>\n",
+       "      <td>-6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>389</th>\n",
-       "      <td>CEGR3</td>\n",
+       "      <th>383</th>\n",
+       "      <td>ALPA4</td>\n",
        "      <td>-6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1442,18 +1374,8 @@
        "      <td>-6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>379</th>\n",
-       "      <td>ALPA3</td>\n",
-       "      <td>-6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>359</th>\n",
-       "      <td>BRGE11</td>\n",
-       "      <td>-6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>344</th>\n",
-       "      <td>GPAR3</td>\n",
+       "      <th>337</th>\n",
+       "      <td>JOPA3</td>\n",
        "      <td>-6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1462,53 +1384,23 @@
        "      <td>-6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>337</th>\n",
-       "      <td>JOPA3</td>\n",
+       "      <th>344</th>\n",
+       "      <td>GPAR3</td>\n",
        "      <td>-6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>CTNM3</td>\n",
+       "      <th>359</th>\n",
+       "      <td>BRGE11</td>\n",
        "      <td>-6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>CRDE3</td>\n",
-       "      <td>-6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>298</th>\n",
-       "      <td>PTNT3</td>\n",
+       "      <th>141</th>\n",
+       "      <td>CESP5</td>\n",
        "      <td>-6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>275</th>\n",
        "      <td>WHRL4</td>\n",
-       "      <td>-6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>226</th>\n",
-       "      <td>EMAE4</td>\n",
-       "      <td>-6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>CRPG6</td>\n",
-       "      <td>-6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>GEPA3</td>\n",
-       "      <td>-6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>168</th>\n",
-       "      <td>CSRN5</td>\n",
-       "      <td>-6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>402</th>\n",
-       "      <td>RAIL3</td>\n",
        "      <td>-6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1523,35 +1415,25 @@
       "text/plain": [
        "     Ticker  Valor\n",
        "6     MAPT4     -7\n",
-       "383   ALPA4     -7\n",
        "299   WLMM4     -7\n",
-       "391   BRFS3     -7\n",
-       "204   BMEB3     -7\n",
-       "141   CESP5     -7\n",
        "241   CGAS5     -7\n",
-       "10    EMBR3     -7\n",
-       "34    TXRX4     -7\n",
-       "24    FRIO3     -7\n",
-       "389   CEGR3     -6\n",
-       "7     NORD3     -6\n",
-       "379   ALPA3     -6\n",
-       "359  BRGE11     -6\n",
-       "344   GPAR3     -6\n",
-       "343   BALM3     -6\n",
-       "337   JOPA3     -6\n",
-       "36    CTNM3     -6\n",
-       "44    CRDE3     -6\n",
-       "298   PTNT3     -6\n",
-       "275   WHRL4     -6\n",
-       "226   EMAE4     -6\n",
-       "200   CRPG6     -6\n",
-       "196   GEPA3     -6\n",
+       "204   BMEB3     -7\n",
+       "391   BRFS3     -7\n",
        "168   CSRN5     -6\n",
-       "402   RAIL3     -6\n",
+       "34    TXRX4     -6\n",
+       "24    FRIO3     -6\n",
+       "383   ALPA4     -6\n",
+       "7     NORD3     -6\n",
+       "337   JOPA3     -6\n",
+       "343   BALM3     -6\n",
+       "344   GPAR3     -6\n",
+       "359  BRGE11     -6\n",
+       "141   CESP5     -6\n",
+       "275   WHRL4     -6\n",
        "330   EQPA7     -5"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1449,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# colocar filtro de liquidez"
+    "# colocar filtro de liquidez\n",
+    "# colocar coleta yahoo finace"
    ]
   }
  ],
