--- a/pre-trading-analises/estudo RSI_CURTO_tick.ipynb
+++ b/pre-trading-analises/estudo RSI_CURTO_tick.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,19 +86,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2022-01-03 09:03:00</th>\n",
+       "      <th>2022-02-02 07:00:03</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>5728.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-01-03 09:03:59</th>\n",
-       "      <td>5673.0</td>\n",
-       "      <td>5728.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -106,19 +96,9 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-01-03 09:04:06</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5728.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-01-03 09:04:29</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5700.0</td>\n",
+       "      <th>2022-02-02 08:55:00</th>\n",
+       "      <td>5301.5</td>\n",
+       "      <td>5301.5</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -126,9 +106,29 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-01-03 09:04:56</th>\n",
+       "      <th>2022-02-02 08:55:00</th>\n",
+       "      <td>5301.5</td>\n",
+       "      <td>5286.5</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>5675.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-02 08:55:04</th>\n",
+       "      <td>5360.0</td>\n",
+       "      <td>5286.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-02 08:55:24</th>\n",
+       "      <td>5400.0</td>\n",
+       "      <td>5286.5</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -146,100 +146,100 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-02-04 18:29:59</th>\n",
-       "      <td>5359.5</td>\n",
-       "      <td>5360.0</td>\n",
-       "      <td>5361.0</td>\n",
+       "      <th>2022-02-10 15:18:49</th>\n",
+       "      <td>5239.0</td>\n",
+       "      <td>5239.5</td>\n",
+       "      <td>5239.5</td>\n",
        "      <td>1</td>\n",
-       "      <td>79.626547</td>\n",
-       "      <td>69.887415</td>\n",
-       "      <td>64.633682</td>\n",
+       "      <td>56.674674</td>\n",
+       "      <td>54.989352</td>\n",
+       "      <td>54.305663</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-02-04 18:29:59</th>\n",
-       "      <td>5359.0</td>\n",
-       "      <td>5361.0</td>\n",
-       "      <td>5361.0</td>\n",
+       "      <th>2022-02-10 15:18:49</th>\n",
+       "      <td>5239.0</td>\n",
+       "      <td>5239.5</td>\n",
+       "      <td>5239.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>79.626547</td>\n",
-       "      <td>69.887415</td>\n",
-       "      <td>64.633682</td>\n",
+       "      <td>39.745085</td>\n",
+       "      <td>45.437626</td>\n",
+       "      <td>47.927499</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-02-04 18:29:59</th>\n",
-       "      <td>5359.0</td>\n",
-       "      <td>5361.0</td>\n",
-       "      <td>5359.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>26.246273</td>\n",
-       "      <td>37.913130</td>\n",
-       "      <td>43.357646</td>\n",
+       "      <th>2022-02-10 15:18:49</th>\n",
+       "      <td>5239.0</td>\n",
+       "      <td>5239.5</td>\n",
+       "      <td>5239.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>56.127001</td>\n",
+       "      <td>54.356924</td>\n",
+       "      <td>53.774305</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-02-04 19:30:00</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5359.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>26.246273</td>\n",
-       "      <td>37.913130</td>\n",
-       "      <td>43.357646</td>\n",
+       "      <th>2022-02-10 15:18:50</th>\n",
+       "      <td>5239.0</td>\n",
+       "      <td>5239.5</td>\n",
+       "      <td>5239.5</td>\n",
+       "      <td>16</td>\n",
+       "      <td>56.127001</td>\n",
+       "      <td>54.356924</td>\n",
+       "      <td>53.774305</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-02-04 21:00:10</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5359.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>26.246273</td>\n",
-       "      <td>37.913130</td>\n",
-       "      <td>43.357646</td>\n",
+       "      <th>2022-02-10 15:18:50</th>\n",
+       "      <td>5239.0</td>\n",
+       "      <td>5239.5</td>\n",
+       "      <td>5239.5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>56.127001</td>\n",
+       "      <td>54.356924</td>\n",
+       "      <td>53.774305</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1342743 rows × 7 columns</p>\n",
+       "<p>1734028 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                        bid     ask    last  volume       IFR5       IFR9  \\\n",
        "time                                                                        \n",
-       "2022-01-03 09:03:00     0.0  5728.0     0.0       0        NaN        NaN   \n",
-       "2022-01-03 09:03:59  5673.0  5728.0     0.0       0        NaN        NaN   \n",
-       "2022-01-03 09:04:06     0.0  5728.0     0.0       0        NaN        NaN   \n",
-       "2022-01-03 09:04:29     0.0  5700.0     0.0       0        NaN        NaN   \n",
-       "2022-01-03 09:04:56     0.0  5675.0     0.0       0        NaN        NaN   \n",
+       "2022-02-02 07:00:03     0.0     0.0     0.0       0        NaN        NaN   \n",
+       "2022-02-02 08:55:00  5301.5  5301.5     0.0       0        NaN        NaN   \n",
+       "2022-02-02 08:55:00  5301.5  5286.5     0.0       0        NaN        NaN   \n",
+       "2022-02-02 08:55:04  5360.0  5286.5     0.0       0        NaN        NaN   \n",
+       "2022-02-02 08:55:24  5400.0  5286.5     0.0       0        NaN        NaN   \n",
        "...                     ...     ...     ...     ...        ...        ...   \n",
-       "2022-02-04 18:29:59  5359.5  5360.0  5361.0       1  79.626547  69.887415   \n",
-       "2022-02-04 18:29:59  5359.0  5361.0  5361.0       1  79.626547  69.887415   \n",
-       "2022-02-04 18:29:59  5359.0  5361.0  5359.0       4  26.246273  37.913130   \n",
-       "2022-02-04 19:30:00     0.0     0.0  5359.0       4  26.246273  37.913130   \n",
-       "2022-02-04 21:00:10     0.0     0.0  5359.0       4  26.246273  37.913130   \n",
+       "2022-02-10 15:18:49  5239.0  5239.5  5239.5       1  56.674674  54.989352   \n",
+       "2022-02-10 15:18:49  5239.0  5239.5  5239.0       1  39.745085  45.437626   \n",
+       "2022-02-10 15:18:49  5239.0  5239.5  5239.5       1  56.127001  54.356924   \n",
+       "2022-02-10 15:18:50  5239.0  5239.5  5239.5      16  56.127001  54.356924   \n",
+       "2022-02-10 15:18:50  5239.0  5239.5  5239.5       8  56.127001  54.356924   \n",
        "\n",
        "                         IFR14  \n",
        "time                            \n",
-       "2022-01-03 09:03:00        NaN  \n",
-       "2022-01-03 09:03:59        NaN  \n",
-       "2022-01-03 09:04:06        NaN  \n",
-       "2022-01-03 09:04:29        NaN  \n",
-       "2022-01-03 09:04:56        NaN  \n",
+       "2022-02-02 07:00:03        NaN  \n",
+       "2022-02-02 08:55:00        NaN  \n",
+       "2022-02-02 08:55:00        NaN  \n",
+       "2022-02-02 08:55:04        NaN  \n",
+       "2022-02-02 08:55:24        NaN  \n",
        "...                        ...  \n",
-       "2022-02-04 18:29:59  64.633682  \n",
-       "2022-02-04 18:29:59  64.633682  \n",
-       "2022-02-04 18:29:59  43.357646  \n",
-       "2022-02-04 19:30:00  43.357646  \n",
-       "2022-02-04 21:00:10  43.357646  \n",
+       "2022-02-10 15:18:49  54.305663  \n",
+       "2022-02-10 15:18:49  47.927499  \n",
+       "2022-02-10 15:18:49  53.774305  \n",
+       "2022-02-10 15:18:50  53.774305  \n",
+       "2022-02-10 15:18:50  53.774305  \n",
        "\n",
-       "[1342743 rows x 7 columns]"
+       "[1734028 rows x 7 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ativo_analise = 'WDOH22'\n",
-    "df_analise = mt5.copy_ticks_from(ativo_analise, datetime(2022, 1, 2),100000000, mt5.COPY_TICKS_ALL)\n",
+    "df_analise = mt5.copy_ticks_from(ativo_analise, datetime(2022, 2, 2),1000000000, mt5.COPY_TICKS_ALL)\n",
     "df_analise = pd.DataFrame(df_analise)\n",
     "df_analise['time'] = pd.to_datetime(df_analise['time'], unit='s')\n",
     "df_analise.drop(['flags', 'time_msc', 'volume_real'], axis = 1, inplace=True)\n",
@@ -248,6 +248,218 @@
     "df_analise['IFR9'] = ta.rsi(df_analise['last'], length=9)\n",
     "df_analise['IFR14'] = ta.rsi(df_analise['last'], length=14)\n",
     "df_analise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bid</th>\n",
+       "      <th>ask</th>\n",
+       "      <th>last</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>IFR5</th>\n",
+       "      <th>IFR9</th>\n",
+       "      <th>IFR14</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-02-09 09:30:00</th>\n",
+       "      <td>5276.5</td>\n",
+       "      <td>5277.0</td>\n",
+       "      <td>5276.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.072808</td>\n",
+       "      <td>44.576042</td>\n",
+       "      <td>46.563722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-09 09:30:00</th>\n",
+       "      <td>5276.5</td>\n",
+       "      <td>5277.0</td>\n",
+       "      <td>5277.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>56.828692</td>\n",
+       "      <td>54.099051</td>\n",
+       "      <td>52.725012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-09 09:30:00</th>\n",
+       "      <td>5276.5</td>\n",
+       "      <td>5277.0</td>\n",
+       "      <td>5277.0</td>\n",
+       "      <td>89</td>\n",
+       "      <td>56.828692</td>\n",
+       "      <td>54.099051</td>\n",
+       "      <td>52.725012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-09 09:30:00</th>\n",
+       "      <td>5276.5</td>\n",
+       "      <td>5277.0</td>\n",
+       "      <td>5276.5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>39.550026</td>\n",
+       "      <td>44.435956</td>\n",
+       "      <td>46.506096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-09 09:30:00</th>\n",
+       "      <td>5276.5</td>\n",
+       "      <td>5277.0</td>\n",
+       "      <td>5277.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>56.197587</td>\n",
+       "      <td>53.733099</td>\n",
+       "      <td>52.535219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-09 16:30:00</th>\n",
+       "      <td>5245.0</td>\n",
+       "      <td>5245.5</td>\n",
+       "      <td>5245.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>44.096666</td>\n",
+       "      <td>46.330213</td>\n",
+       "      <td>47.367454</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-09 16:30:00</th>\n",
+       "      <td>5245.0</td>\n",
+       "      <td>5245.5</td>\n",
+       "      <td>5244.5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>33.508865</td>\n",
+       "      <td>39.402967</td>\n",
+       "      <td>42.361545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-09 16:30:00</th>\n",
+       "      <td>5245.0</td>\n",
+       "      <td>5245.5</td>\n",
+       "      <td>5245.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>48.858104</td>\n",
+       "      <td>48.128254</td>\n",
+       "      <td>48.251176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-09 16:30:00</th>\n",
+       "      <td>5244.5</td>\n",
+       "      <td>5245.0</td>\n",
+       "      <td>5245.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>48.858104</td>\n",
+       "      <td>48.128254</td>\n",
+       "      <td>48.251176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-09 16:30:00</th>\n",
+       "      <td>5244.5</td>\n",
+       "      <td>5245.0</td>\n",
+       "      <td>5245.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>48.858104</td>\n",
+       "      <td>48.128254</td>\n",
+       "      <td>48.251176</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>209283 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        bid     ask    last  volume       IFR5       IFR9  \\\n",
+       "time                                                                        \n",
+       "2022-02-09 09:30:00  5276.5  5277.0  5276.5       1  40.072808  44.576042   \n",
+       "2022-02-09 09:30:00  5276.5  5277.0  5277.0       1  56.828692  54.099051   \n",
+       "2022-02-09 09:30:00  5276.5  5277.0  5277.0      89  56.828692  54.099051   \n",
+       "2022-02-09 09:30:00  5276.5  5277.0  5276.5       6  39.550026  44.435956   \n",
+       "2022-02-09 09:30:00  5276.5  5277.0  5277.0       3  56.197587  53.733099   \n",
+       "...                     ...     ...     ...     ...        ...        ...   \n",
+       "2022-02-09 16:30:00  5245.0  5245.5  5245.0       1  44.096666  46.330213   \n",
+       "2022-02-09 16:30:00  5245.0  5245.5  5244.5       5  33.508865  39.402967   \n",
+       "2022-02-09 16:30:00  5245.0  5245.5  5245.0       7  48.858104  48.128254   \n",
+       "2022-02-09 16:30:00  5244.5  5245.0  5245.0       7  48.858104  48.128254   \n",
+       "2022-02-09 16:30:00  5244.5  5245.0  5245.0       2  48.858104  48.128254   \n",
+       "\n",
+       "                         IFR14  \n",
+       "time                            \n",
+       "2022-02-09 09:30:00  46.563722  \n",
+       "2022-02-09 09:30:00  52.725012  \n",
+       "2022-02-09 09:30:00  52.725012  \n",
+       "2022-02-09 09:30:00  46.506096  \n",
+       "2022-02-09 09:30:00  52.535219  \n",
+       "...                        ...  \n",
+       "2022-02-09 16:30:00  47.367454  \n",
+       "2022-02-09 16:30:00  42.361545  \n",
+       "2022-02-09 16:30:00  48.251176  \n",
+       "2022-02-09 16:30:00  48.251176  \n",
+       "2022-02-09 16:30:00  48.251176  \n",
+       "\n",
+       "[209283 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df_analise.loc['2022-02-09 09:30:00' : '2022-02-09 16:30:00']\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('dolar0902.csv')"
    ]
   },
   {
